# more-interesting

./: .env  .gitignore  .gitpod.yml  .travis.yml  Cargo.nix  Cargo.toml  LICENSE-MIT  MIGRATE_0.4_TO_0.5.md  Procfile  README.md  Rocket.toml  app.json  diesel.toml  package-lock.json  package.json  run-pax.bat  run-pax.sh  run-webpack.bat  run-webpack.sh
.github/: pull.yml
assets/: admin.css  details-dialog.js  details-menu-bar.js  faq.html  how-to-bbcode.html  how-to-code.html  how-to-table.html  how-to.html  package-lock.json  package.json  robots.txt  script.js  style.css  webpack.config.js
assets/js/: ajax-form.js  ajax-form.mjs  details-dialog-close.js  details-dialog.js  details-element-polyfill.js  details-menu-bar.js  details-menu-bar.mjs  extra-polyfills.js  img-lightbox.mjs  legacy.js  legacy.mjs  local-date.mjs  modern.js  modern.mjs  smart-punct.mjs  smart-textarea.mjs  subscriptions-menu.mjs  tags-typeahead.mjs
config/: nginx.conf.erb
libraries/more-interesting-avatar/: Cargo.toml  build.rs  data.rs  lib.rs
libraries/more-interesting-base32/: Cargo.toml  lib.rs
migrations/2019-02-22-012908_create_posts/: down.sql  up.sql
migrations/2019-03-29-195343_cannot_star_own_posts/: down.sql  up.sql
migrations/2019-04-01-213406_tags/: down.sql  up.sql
migrations/2019-04-02-231441_excerpt/: down.sql  up.sql
migrations/2019-04-05-041541_theming/: down.sql  up.sql
migrations/2019-04-05-191926_moderation-log/: down.sql  up.sql
migrations/2019-04-06-040345_flagging/: down.sql  up.sql
migrations/2019-04-12-222747_search-index/: down.sql  up.sql
migrations/2019-04-15-223952_fix-insert-order/: up.sql
migrations/2019-04-23-210713_domains/: down.sql  up.sql
migrations/2019-04-29-234942_legacy_comments/: down.sql  up.sql
migrations/2019-06-07-015840_banners/: down.sql  up.sql
migrations/2019-07-26-183821_banned_anonymous/: up.sql
migrations/2019-07-26-234724_user_sessions/: up.sql
migrations/2019-08-11-175340_domain_synonyms/: down.sql  up.sql
migrations/2019-10-21-210049_private_posts/: down.sql  up.sql
migrations/2019-11-17-181316_site_customization/: down.sql  up.sql
migrations/2020-07-18-202200_user_identicon/: down.sql  up.sql
migrations/2020-07-20-175700_user_hidden/: down.sql  up.sql
migrations/2020-07-31-234452_search-gin/: down.sql  up.sql
migrations/2020-11-10-234452_search-title/: up.sql
migrations/2020-12-18-055027_readpoint/: down.sql  up.sql
migrations/2021-05-11-000553_restricted-domains/: down.sql  up.sql
migrations/2021-07-21-233956_title-html/: down.sql  up.sql
migrations/2021-08-06-234834_idx_posts_homepage/: down.sql  up.sql
migrations/2021-08-06-235426_idx_posts_updated/: down.sql  up.sql
migrations/2021-08-06-235656_idx_posts_score/: down.sql  up.sql
migrations/2021-08-09-172127_idx_posts_userprofile/: down.sql  up.sql
migrations/2021-08-10-182737_idx_posts_domain/: down.sql  up.sql
migrations/2021-08-11-170118_idx_comments_post/: down.sql  up.sql
migrations/2021-08-25-235934_blog_posts/: down.sql  up.sql
migrations/2021-09-13-172349_hidesindex/: down.sql  up.sql
migrations/2021-09-13-173002_commentsbyuser/: down.sql  up.sql
migrations/2021-09-29-222333_last_seen_at/: down.sql  up.sql
migrations/2021-10-27-224848_polls/: down.sql  up.sql
migrations/2021-12-21-225614_noindex/: down.sql  up.sql
migrations/2021-12-24-185321_locked/: down.sql  up.sql
migrations/2022-08-25-155857_anon/: down.sql  up.sql
migrations/2022-10-28-173338_blocked_regexes/: down.sql  up.sql
migrations/2022-11-25-212341_newtl/: down.sql  up.sql
src/: base128.rs  base32.rs  customization.rs  extract_excerpt.rs  forever.rs  main.rs  models.rs  password.rs  pid_file_fairing.rs  prettify.rs  schema.rs  session.rs  sql_types.rs  template.rs
templates/: blog.hbs  blog.html  blog.rss.xml  comments.hbs  comments.html  create-post.html  edit-comment.hbs  edit-comment.html  edit-post.hbs  edit-post.html  edit-tags.hbs  faq.hbs  faq.html  index-comments.html  index-latest.hbs  index-latest.html  index-new.hbs  index-new.html  index-random.html  index-top.hbs  index-top.html  index.hbs  index.html  invite-tree.html  layout.hbs  layout.html  login.hbs  login.html  macro-nav.html  message.hbs  message.html  mod-log.hbs  mod-log.html  mod-queue-comment.hbs  mod-queue-empty.hbs  mod-queue-post.hbs  mod-queue.hbs  mod-queue.html  post.hbs  post.html  (+35 more)
templates/admin/: blocked-regexes.html  comment-flags.html  customization.hbs  customization.html  domains.hbs  domains.html  flags.html  layout.hbs  layout.html  tags.hbs  tags.html  users.hbs  users.html
test/webdriver/: package-lock.json  package.json  test.sh
(+1 files in other folders)
