[package]
name = "more-interesting"
version = "0.1.0"
authors = ["Michael Howell <michael@notriddle.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
rocket = "0.4.2"
rocket_contrib = { version = "0.4.2", default-features = false, features = ["diesel_postgres_pool", "serve", "handlebars_templates"] }
diesel = { version = "1.4.2", features = ["postgres", "chrono", "serde_json"] }
diesel_full_text_search = "1.0.1"
chrono = { version = "0.4.6", features = ["serde"] }
chrono-humanize = "0.0.11"
ring = "0.13.5"
rand = "0.7.0"
serde = { version = "1.0.94", features = ["derive"] }
unicode-normalization = "0.1.8"
lazy_static = "1"
quickcheck = "0.8"
byteorder = "1.3"
ordered-float = "1.0.2"
url = "1.7.2"
url_serde = "0.2"
v_htmlescape = "0.4.3"
log = "0.4.6"
env_logger = "0.6.2"
ammonia = "2"
serde_json = "1.0.40"
kuchiki = "0.7"
html5ever = "0.23"
reqwest = "0.9.18"
readability = "0.1.5"
regex = "1"
