[package]
name = "more-interesting"
version = "0.1.0"
authors = ["Michael Howell <michael@notriddle.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", default-features = false, features = ["diesel_postgres_pool", "serve", "handlebars_templates"] }
diesel = { version = "1.4.3", features = ["postgres", "chrono", "serde_json"] }
diesel_full_text_search = "1.0.1"
chrono = { version = "0.4.11", features = ["serde"] }
chrono-humanize = "0.0.11"
ring = "0.13.5"
rand = "0.7.3"
serde = { version = "1.0.104", features = ["derive"] }
unicode-normalization = "0.1.13"
lazy_static = "1"
quickcheck = "0.9"
byteorder = "1.3"
ordered-float = "2.0.0"
url = "1.7.2"
percent-encoding = "2.1.0"
url_serde = "0.2"
v_htmlescape = "0.12.0"
log = "0.4.11"
env_logger = "0.7.1"
ammonia = "3"
serde_json = { version = "1.0.57", features = ["preserve_order"] }
kuchiki = "0.8"
reqwest = "0.10.7"
regex = "1"
more-interesting-base32 = { path = "libraries/more-interesting-base32" }
more-interesting-avatar = { path = "libraries/more-interesting-avatar" }

[workspace]
members = [
    "libraries/more-interesting-base32"
]

