[package]
name = "more-interesting-base32"
version = "0.1.0"
authors = ["Michael Howell <michael@notriddle.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
path = "lib.rs"

[dependencies]
rocket = "0.5.0-rc.1"
rocket_sync_db_pools = { version = "0.1.0-rc.1", default-features = false, features = ["diesel_postgres_pool"] }
diesel = { version = "1.4.3", features = ["postgres", "chrono", "serde_json"] }
serde = { version = "1.0.104", features = ["derive"] }
byteorder = "1.3"
lazy_static = "1"
quickcheck = "0.9"
unicode-normalization = "0.1.13"
percent-encoding = "2.1.0"

